--- a/src/shared/ui/Button/styles.module.css
+++ b/src/shared/ui/Button/styles.module.css
@@ -6,7 +6,7 @@
     width: 100%;
     padding: 15px 20px;
     line-height: 21px;
-    filter: drop-shadow(0 2px 10px rgba(0, 0, 0, 0.34));
+    filter: drop-shadow(0 0 15px rgba(0, 0, 0, 0.34));
     color: #f8f9fa;
     cursor: pointer;
 }
