--- a/src/shared/ui/Modal/styles.module.css
+++ b/src/shared/ui/Modal/styles.module.css
@@ -15,8 +15,9 @@
 }
 
 .modal {
+    display: flex;
+    flex-direction: column;
     height: 85vh;
-    padding-bottom: 52px;
     background-color: var(--neutral-100);
     color: var(--neutral-900);
 }
@@ -39,11 +40,11 @@
 }
 
 .modalBody {
+    flex-grow: 1;
     display: flex;
     flex-direction: column;
     gap: 15px;
     overflow-y: auto;
-    height: calc(85vh - 92px);
     padding: 20px 0;
 }
 
@@ -57,10 +58,6 @@
     .modal {
         height: 70vh;
         width: 400px;
-    }
-
-    .modalBody {
-        height: calc(70vh - 92px);
     }
 
     .visible {
