--- a/src/shared/ui/Card/styles.module.css
+++ b/src/shared/ui/Card/styles.module.css
@@ -28,9 +28,11 @@
     color: var(--neutral-600);
 }
 
-.card:hover {
-    transition: .2s ease-in;
-    background-color: var(--neutral-400);
+@media (hover: hover) {
+    .card:hover {
+        transition: .2s ease-in;
+        background-color: var(--neutral-400);
+    }
 }
 
 
